--- a/src/scss/partials/general.scss
+++ b/src/scss/partials/general.scss
@@ -6,8 +6,15 @@
 a{
   text-decoration: none;
   color: $grey;
-  
+  scale: 1.5;
   &:hover{
     color: $white;
+    border: 1px solid $grey;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
   }
+}
+ul{
+  list-style: none;
 }
