--- a/src/scss/partials/general.scss
+++ b/src/scss/partials/general.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 a{
   text-decoration: none;
@@ -17,4 +18,14 @@ a{
 }
 ul{
   list-style: none;
+}
+.line{
+  margin-top: 14px;
+  margin-right: 10px;
+  border-top: 1px solid $grey;
+  width: 50px;
+  color: grey;
+}
+.white-card{
+  color: $grey;
 }
