--- a/src/scss/partials/general.scss
+++ b/src/scss/partials/general.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+.container{
+  width: 80%;
+  margin: 0 auto;
+}
 a{
   text-decoration: none;
   color: $grey;
