--- a/src/scss/partials/general.scss
+++ b/src/scss/partials/general.scss
@@ -2,11 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Barlow Condensed', sans-serif;
   font-family: 'Poppins', sans-serif;
 }
 .container{
-  width: 80%;
-  margin: 0 auto;
+  width: 65%;
+  margin: 80px auto;
 }
 a{
   text-decoration: none;
